# Horssite-flask

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
horssite_flask/: __init__.py  app.py  database.py  forms.py  userlogin.py
horssite_flask/admin/: admin.py  database_admin.py
horssite_flask/admin/templates/admin/: base_admin.html  listpubs.html
horssite_flask/static/css/: styles.css
horssite_flask/templates/: about.html  add_post.html  base.html  contact.html  index.html  login.html  page404.html  post.html  register.html  update_post.html
